[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/interactive_screens/music/music_panel_send.glb" type="PackedScene" id=1]
[ext_resource path="res://clickable_area.gd" type="Script" id=2]
[ext_resource path="res://music_button.gd" type="Script" id=3]

[sub_resource type="BoxShape" id=1]

[node name="music_panel_send" instance=ExtResource( 1 )]
script = ExtResource( 3 )

[node name="send" type="Area" parent="." index="5"]
script = ExtResource( 2 )
area_path = NodePath("../send")

[node name="CollisionShape" type="CollisionShape" parent="send" index="0"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.342764, 0, 0.530618 )
shape = SubResource( 1 )
[connection signal="ready" from="." to="." method="_on_music_panel_send_ready"]
[connection signal="area_clicked" from="send" to="." method="_on_send_area_clicked"]
[connection signal="mouse_entered" from="send" to="." method="_on_send_mouse_entered"]
[connection signal="mouse_exited" from="send" to="." method="_on_send_mouse_exited"]
